# tree-sitter-aql

./: .gitignore  CMakeLists.txt  Cargo.toml  Makefile  Package.swift  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  setup.py  tree-sitter.json
.github/: FUNDING.yml
.github/workflows/: ci.yml
bindings/c/: tree-sitter-aql.pc.in
bindings/go/: binding.go  binding_test.go
bindings/node/: binding.cc  index.js
bindings/python/tests/: test_binding.py
bindings/python/tree_sitter_aql/: __init__.py  binding.c
bindings/rust/: build.rs  lib.rs
bindings/swift/TreeSitterAql/: aql.h
bindings/swift/TreeSitterAqlTests/: TreeSitterAqlTests.swift
examples/: array-index.aql  basic-bind-var.aql  basic-collect.aql  basic-filter.aql  basic-limit.aql  basic-sort.aql  basic-subquery.aql  basic.aql  extended-traversal.aql  nested-loop.aql  object.aql  sort-distinct.aql  traversal.aql  variable-collection.aql
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: collect.txt  distinct.txt  object_return.txt  sort.txt  statements.txt  traversals.txt
